[tool.poetry]
name = "verrus-bot-commandsbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pyfiglet = "^0.8.post1"
"discord.py" = "^1.6.0"
replit = "^2.0.0"
discord-py-slash-command = "^1.0.9"
discord = "^1.0.1"
pastebin = "^1.1.2"
fake-factory = "^9999.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
